# lighthouse2tools

./: CMakeLists.txt  LICENSE  README.md
include/: lfsr.h  lh2polys.h
jupyter/: encoding-test.ipynb
src/: CMakeLists.txt  find_best_poly.cc  iterate_str.cc  lfsr.cc  lfsr.h  lh2polys.cc  lh2polys.h  r2x0t_decode.c
